# yee-signer

./: .gitignore  Cargo.toml  README.md  build.sh
android/: pom.xml
android/src/main/java/io/yeeco/yeesigner/: Main.java  Verifier.java
java/: io_yeeco_yeesigner_JNI.h
java/jniLibs/: libyee_signer.dylib
java/src/main/java/io/yeeco/yeesigner/: Call.java  ErrorUtils.java  JNI.java  KeyPair.java  Tx.java
java/src/test/java/: SingerTest.java  TxTest.java
oc/YeeSigner/YeeSigner/: ViewController.m
oc/YeeSigner/YeeSigner.xcodeproj/: project.pbxproj
oc/YeeSigner/YeeSigner.xcodeproj/project.xcworkspace/xcuserdata/gb.xcuserdatad/: UserInterfaceState.xcuserstate
oc/YeeSigner/YeeSigner/YeeSigner/: Call.h  Call.m  ErrorUtils.m  KeyPair.h  KeyPair.m  Transaction.h  Transaction.m  Verifier.h  Verifier.m  libyee_signer.h
src/: address.rs  alloc.rs  error.rs  export.rs  external.rs  ffi.rs  jni.rs  lib.rs  tx.rs
src/tx/: call.rs  serde.rs  types.rs
