[package]
name = "yee-signer"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
schnorrkel = "0.1.1"
jni = "0.16.0"
parity-codec = { version = "=3.2", features = ["derive"] }
rust_crypto = { version = "0.2.36", package = "rust-crypto" }
serde = { version = "=1.0", features = ["derive"] }
serde_derive = "=1.0"
serde_json = "=1.0"
impl-serde = "0.1"

[dev-dependencies]
hex = "0.3.2"
